# SnapCogs

./: .gitignore  MANIFEST.in  README.md  compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
snapcogs/: __init__.py  bot.py  database.py  tree.py
snapcogs/Admin/: __init__.py  admin.py
snapcogs/Announcements/: __init__.py  announcements.py  models.py
snapcogs/Announcements/sql/: create_tables.sql  delete_birthday.sql  get_guild_birthdays.sql  get_member_birthday.sql  is_already_registered.sql  save_birthday.sql
snapcogs/Development/: __init__.py  development.py
snapcogs/Fun/: __init__.py  fun.py
snapcogs/Horoscope/: horoscope.py
snapcogs/Information/: __init__.py  information.py
snapcogs/Link/: __init__.py  link.py
snapcogs/Poll/: __init__.py  poll.py  views.py
snapcogs/Roles/: __init__.py  roles.py  views.py
snapcogs/Timestamps/: __init__.py  timestamps.py  timezones.py
snapcogs/Tips/: __init__.py  models.py  tips.py  views.py
snapcogs/utils/: __init__.py  checks.py  db.py  logging.py  transformers.py  views.py
src/: __init__.py  tree.py
src/Admin/: admin.py
src/Development/: __init__.py  development.py
src/Fun/: 8ball_answers.json  fun.py
src/Information/: information.py
src/Roles/: __init__.py
src/Tips/: models.py
src/snapcogs/: __init__.py  bot.py  database.py  tree.py
src/snapcogs/Admin/: __init__.py  admin.py
src/snapcogs/Announcements/: __init__.py  announcements.py
src/snapcogs/Development/: __init__.py  development.py
src/snapcogs/Fun/: __init__.py  fun.py
src/snapcogs/Horoscope/: __init__.py  horoscope.py
src/snapcogs/Information/: __init__.py  information.py
src/snapcogs/Measurements/: __init__.py  measurements.py
src/snapcogs/Roles/: __init__.py  models.py  roles.py  views.py
src/snapcogs/Timestamps/: __init__.py  timestamps.py  timezones.py
src/snapcogs/Tips/: __init__.py  tips.py  views.py
src/snapcogs/utils/: __init__.py  checks.py  errors.py  transformers.py  views.py
src/utils/: views.py
