[metadata]
name = snapcogs
version = attr: snapcogs.__version__
url = https://github.com/Snaptraks/SnapCogs
author = Snaptraks
license = GNU GPLv3
license_files = LICENSE.txt
description = A collection of Cogs for discord.py>=2.0.0 bots
long_description = file: README.md
long_description_content_type = text/markdown
keywords = discord, bot, modules, cogs
project_urls =
    Bug Reports = https://github.com/Snaptraks/SnapCogs/issues
    Source = https://github.com/Snaptraks/SnapCogs/
classifiers =
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    Development Status :: 3 - Alpha
    # Indicate who your project is intended for
    Intended Audience :: Developers
    Topic :: Communications :: Chat
    Topic :: Internet
    Topic :: Utilities
    # Pick your license as you wish
    License :: OSI Approved :: MIT License
    # Specify the Python versions you support here. In particular, ensure
    # that you indicate you support Python 3. These classifiers are *not*
    # checked by 'pip install'. See instead 'python_requires' below.
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[options]
install_requires = file: requirements.txt
python_requires = >=3.9, <4
include_package_data = True
packages = find:

[options.packages.find]
where = snapcogs

[options.package_data]
zip_safe = False
snapcogs =
    8ball_answers.json
    8ball_filter.png
    bonk_template.png
    lick_template.gif
    *.sql

[flake8]
max-line-length = 88
